@@ -13,6 +13,7 @@ BUGFIX:
 
 GENERAL:
 * class ServiceStore | loop detection - reduce mwarning output to a single finding per $groupName
+* update bash_autocompletion/pan-os-php.sh
 
 
 2.1.1 (20230419)
